--- a/ver0.1.html
+++ b/ver0.1.html
@@ -8,7 +8,7 @@
 		<br>
 		<img src="ver0.1/2.png" width="1200" height="1400">
 		<br>
-		<img src="ver0.1/3.png" width="1200" height="1400">
+		<img class="loading p1" data-src="ver0.1/2.png" src="ver0.1/2.png" loading="lazy" alt="69 University Raw - Chapter 16 Page 1" style="width: 100%; min-height: 100px; background: none;">
 		<br>
 		<img src="ver0.1/4.png" width="1200" height="1400">
 		<br>
