--- a/1.html
+++ b/1.html
@@ -1,105 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="https://bsviijrkvc.github.io/img.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=0" />
     <title>doujin</title>
   </head>
   <body style="background-color: #121010;">
        <p>
-      <img src="aeibdxezzw/1.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/1.png" width="800" />
     </p>
 
        <p>
-      <img src="aeibdxezzw/2.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/2.png" width="800" />
     </p>
 	
 	    <p>
-      <img src="aeibdxezzw/3.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/3.png" width="800" />
     </p>
 	
 	    <p>
-      <img src="aeibdxezzw/4.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/4.png" width="800" />
     </p>
 	
 	    <p>
-      <img src="aeibdxezzw/4-2.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/4-2.png" width="800" />
     </p>
 	
 	    <p>
-      <img src="aeibdxezzw/5.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/5.png" width="800" />
     </p>
 	
 	    <p>
-      <img src="aeibdxezzw/6.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/6.png" width="800" />
     </p>
 	
 	    <p>
-      <img src="aeibdxezzw/7.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/7.png" width="800" />
     </p>
 	
 	    <p>
-      <img src="aeibdxezzw/8.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/8.png" width="800" />
     </p>
 	
 	    <p>
-      <img src="aeibdxezzw/9.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/9.png" width="800" />
     </p>
 	
 	    <p>
-      <img src="aeibdxezzw/10.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/10.png" width="800" />
     </p>
 	
 	    <p>
-      <img src="aeibdxezzw/11.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/11.png" width="800" />
     </p>
 	
 	    <p>
-      <img src="aeibdxezzw/12.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/12.png" width="800" />
     </p>
 
 	    <p>
-      <img src="aeibdxezzw/13.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/13.png" width="800" />
     </p>
 
 	    <p>
-      <img src="aeibdxezzw/14.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/14.png" width="800" />
     </p>
 
 	    <p>
-      <img src="aeibdxezzw/15.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/15.png" width="800" />
     </p>
 
 	    <p>
-      <img src="aeibdxezzw/16.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/16.png" width="800" />
     </p>
 
 	    <p>
-      <img src="aeibdxezzw/17.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/17.png" width="800" />
     </p>
 
 	    <p>
-      <img src="aeibdxezzw/18.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/18.png" width="800" />
     </p>
 
 	    <p>
-      <img src="aeibdxezzw/19.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/19.png" width="800" />
     </p>
 
 	    <p>
-      <img src="aeibdxezzw/20.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/20.png" width="800" />
     </p>
 
 	    <p>
-      <img src="aeibdxezzw/21.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/21.png" width="800" />
     </p>
 
 	    <p>
-      <img src="aeibdxezzw/22.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/22.png" width="800" />
     </p>
 
 	    <p>
-      <img src="aeibdxezzw/fern%20study.png" width="800" />
+      <img style="display: block; margin: auto;" src="aeibdxezzw/fern%20study.png" width="800" />
     </p>
 	
   </body>
